# SimForge

./: .gitignore  CMakeLists.txt  README.md
include/simforge/: EventCalendar.hpp  SimEvent.hpp
src/: EventCalendar.cpp  main.cpp
tests/: test_event_calendar.cpp
